--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <input type="range" id="zoom" min="1" max="2.5" step="0.1" value="1">
         </label>
 
+        <button id="toggle-bronze">Hide bronze</button>
+        <button id="toggle-silver">Hide silver</button>
         <button id="toggle-visibility">Hide chests</button>
         <button id="toggle-visited">Mark all as visited</button>
 
