feat: add multi-map support and map selector
Added support for multiple maps with a new map selector UI. Each map now loads its own chest data and saves progress independently. Refactored chest loading and save logic to work per map. Fixed chest counter and restored coordinate display.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Occult Crescent Chests Marker - Final Fantasy XIV</h1>
 
+    <div id="map-selector">
+        <button data-map="southHorn">South Horn</button>
+        <button data-map="test">Test</button>
+    </div>
+
+
     <!-- Controles -->
     <div id="controls">
         <label>
